--- a/style.css
+++ b/style.css
@@ -103,3 +103,19 @@ input[type="checkbox"]:checked {
 #copy img {
     width: 20%;
 }
+
+.boite {
+    width: 100px;
+    height: 30px;
+    background-color: grey;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 24px;
+    margin: 10px;
+}
+
+.indicateur {
+    display: flex;
+}
